{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 36,
  "lineage": "98a861ff-c6ba-d0cd-fc90-5df97cde79f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "hardening_pipeline_vpc_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:security-group/sg-005e53029d2ea9e73",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-005e53029d2ea9e73",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "537229986333",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02c420448942a36cc",
            "domain": "vpc",
            "id": "eipalloc-02c420448942a36cc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-86-45.compute-1.amazonaws.com",
            "public_ip": "18.204.86.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_route_table_association.hardening_pipeline_rt_assoc",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hardening_pipeline_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:internet-gateway/igw-0ccb0cce8b53542c0",
            "id": "igw-0ccb0cce8b53542c0",
            "owner_id": "537229986333",
            "tags": {
              "Name": "example-hardening-pipeline-vpc-igw"
            },
            "tags_all": {
              "Name": "example-hardening-pipeline-vpc-igw"
            },
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "dependencies": [
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hardening_pipeline_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hardening_pipeline_nat_gateway_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hardening_pipeline_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:route-table/rtb-0c7671cebb5adb731",
            "id": "rtb-0c7671cebb5adb731",
            "owner_id": "537229986333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccb0cce8b53542c0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-hardening-pipeline-vpc-public-rt"
            },
            "tags_all": {
              "Name": "example-hardening-pipeline-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hardening_pipeline_nat_gw_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hardening_pipeline_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d9079f091f3129a",
            "route_table_id": "rtb-0c7671cebb5adb731",
            "subnet_id": "subnet-097c1c8c5f5279fce"
          },
          "dependencies": [
            "aws_internet_gateway.hardening_pipeline_igw",
            "aws_route_table.hardening_pipeline_public_rt",
            "aws_subnet.hardening_pipeline_private",
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "image_builder_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:security-group/sg-07e803fa9a5c714a1",
            "description": "Security group for EC2 Image Builder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all eggress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e803fa9a5c714a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ephemeral",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-hardening-al2-container-image-sg",
            "name_prefix": "",
            "owner_id": "537229986333",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform"
            },
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hardening_pipeline_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:subnet/subnet-0ca6077913a56c1f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6077913a56c1f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "537229986333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-hardening-pipeline-vpc-private"
            },
            "tags_all": {
              "Name": "example-hardening-pipeline-vpc-private"
            },
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "dependencies": [
            "aws_subnet.hardening_pipeline_public",
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hardening_pipeline_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:subnet/subnet-097c1c8c5f5279fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097c1c8c5f5279fce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "537229986333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-hardening-pipeline-vpc-public"
            },
            "tags_all": {
              "Name": "example-hardening-pipeline-vpc-public"
            },
            "vpc_id": "vpc-05ae7e42a95a4e6f8"
          },
          "dependencies": [
            "aws_vpc.hardening_pipeline"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hardening_pipeline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:537229986333:vpc/vpc-05ae7e42a95a4e6f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0754771b2d87b4f0f",
            "default_route_table_id": "rtb-0693281b217232502",
            "default_security_group_id": "sg-005e53029d2ea9e73",
            "dhcp_options_id": "dopt-8f5b0bf5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ae7e42a95a4e6f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0693281b217232502",
            "owner_id": "537229986333",
            "tags": {
              "Name": "example-hardening-pipeline-vpc"
            },
            "tags_all": {
              "Name": "example-hardening-pipeline-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}